fix(styling): add Dark Mode CSS class to Header Menu - Header Menu wasn't always picking up dark mode styling especially when having multiple dark themes like in Slickgrid-Universal Material/Salesforce

--- a/examples/vite-demo-vanilla-bundle/src/material-styles.scss
+++ b/examples/vite-demo-vanilla-bundle/src/material-styles.scss
@@ -122,6 +122,7 @@
     .ms-dark-mode,
     .ms-drop.ms-dark-mode,
     .slick-dark-mode .ms-dark-mode,
+    .slick-dark-mode .slick-submenu,
     .slick-dark-mode .icon-checkbox-container,
     .ms-dark-mode .icon-checkbox-container,
     .slick-dark-mode {
