--- a/packages/common/src/styles/_variables-theme-salesforce.scss
+++ b/packages/common/src/styles/_variables-theme-salesforce.scss
@@ -130,6 +130,7 @@ $slick-dark-base-dark-menu-bg-color:                      #212121;
 .ms-dark-mode,
 .ms-drop.ms-dark-mode,
 .slick-dark-mode .ms-dark-mode,
+.slick-dark-mode .slick-submenu,
 .slick-dark-mode .icon-checkbox-container,
 .slick-dark-mode {
   --ms-checkbox-color:                      #66b8ff;
